# Government-Data-Product

./: requirements.txt
incumbency-and-market-structure-board/: .gitignore  CLAUDE.md  MILESTONES.md  README.md  pyproject.toml  requirements.txt
incumbency-and-market-structure-board/app/: board.py
incumbency-and-market-structure-board/scripts/: build.py
incumbency-and-market-structure-board/src/incumbency/: __init__.py  clean.py  config.py  entities.py  fixtures.py  ingest.py  linkage.py  normalize.py  pipeline.py  schema.py  signals.py  store.py
incumbency-and-market-structure-board/src/incumbency.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
incumbency-and-market-structure-board/tests/: labelled_vendor_pairs.py  test_clean.py  test_competition.py  test_contract_history.py  test_entities.py  test_ingest_live.py  test_normalize.py  test_pipeline.py  test_signals.py  test_verdict_cases.py
